# VoxelWorld

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  VoxelWorld.sln  run_valgrind.sh
VoxelWorld/: Renderer.cpp  Shader.hlsl  VoxelWorld.vcxproj  VoxelWorld.vcxproj.filters  WVPMatrix.h  main.cpp
assets/: Atlas.json
includes/: AdaptiveRenderDistanceController.h  BiomePolicy.h  BlockLoader.h  BlockMaterial.h  BlockMaterialTable.h  BlockMeshData.h  BlockTextureType.h  BlockType.h  BlockVertex.h  BufferPool.h  Camera.h  Chunk.h  ChunkInfo.h  ChunkMath.h  ChunkMesh.h  DebugUI.h  DeviceFactory.h  Frustum.h  GLPlatform.h  GPUResourceService.h  IVector3.h  ImguiLayer.h  InputManager.h  JobScheduler.h  Logger.h  MapManager.h  MeshBuilder.h  MeshData.h  PathUtils.h  Platform.h  Profiler.h  Renderer.h  RuntimeConfig.h  ScopedProfiler.h  ScreenManager.h  SkyBox.h  StreamingPolicy.h  TestRunner.h  TextureManager.h  Timer.h  (+3 more)
installer/: install_directxtk.ps1  install_imgui.ps1
installer/Linux/: install_all.sh  install_glfw.sh  install_glm.sh  install_imgui.sh  install_opengl.sh  install_stb_image.sh  install_tinyddsloader.sh  install_vscode_dev_tools.sh
installer/Windows/: install_directxtk.ps1  install_imgui.ps1
shaders/: Shader.hlsl  SkyBox.hlsl  renderer.frag  renderer.vert  skybox.frag  skybox.vert
src/: AdaptiveRenderDistanceController.cpp  AdaptiveRenderDistanceController.h  BiomePolicy.cpp  BlockLoader.cpp  BlockLoader.h  BlockMaterial.h  BlockMeshData.cpp  BlockMeshData.h  BlockTextureType.h  BlockType.h  BlockVertex.h  BufferPool.cpp  BufferPool.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkInfo.h  ChunkMath.h  ChunkMesh.h  DebugUI.cpp  DeviceFactory.cpp  FastNoiseLite.h  Frustum.cpp  GPUResourceService.cpp  GPUResourceService.h  IVector3.h  ImguiLayer.cpp  InputManager.cpp  InputManager.h  JobScheduler.cpp  Logger.cpp  MapManager.cpp  MapManager.h  MeshBuilder.cpp  MeshBuilder.h  MeshData.h  PathUtils.cpp  PathUtils.h  Platform.cpp  (+18 more)
valgrind/: valgrind.supp
